<resources>
    <string name="app_name">Driver Map Service</string>
    <string name="sign_in_with_phone">Sign In With Phone</string>
    <string name="register_text">"Register "</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_maps2">Map</string>
</resources>